test_suite/tests/ui/transparent/ser_at_least_one.stderr
error: #[serde(transparent)] requires at least one field that is not skipped
 --> $DIR/ser_at_least_one.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

